Fix spacing on multiple whitespace tokens

--- a/frontend/src/__generated/index.css
+++ b/frontend/src/__generated/index.css
@@ -6059,6 +6059,7 @@ body {
 }
 ._10xh0c27 {
   letter-spacing: 4px;
+  word-spacing: 0;
 }
 ._10xh0c28 {
   background-color: rgba(255, 9, 87, 0.1);
